src/test/ui/issues/issue-20225.stderr
error[E0053]: method `call` has an incompatible type for trait
  --> $DIR/issue-20225.rs:6:3
   |
LL |   extern "rust-call" fn call(&self, (_,): (T,)) {}
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected reference, found type parameter
   |
   = note: expected type `extern "rust-call" fn(&Foo, (&'a T,))`
              found type `extern "rust-call" fn(&Foo, (T,))`

error[E0053]: method `call_mut` has an incompatible type for trait
  --> $DIR/issue-20225.rs:12:3
   |
LL |   extern "rust-call" fn call_mut(&mut self, (_,): (T,)) {}
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected reference, found type parameter
   |
   = note: expected type `extern "rust-call" fn(&mut Foo, (&'a T,))`
              found type `extern "rust-call" fn(&mut Foo, (T,))`

error[E0053]: method `call_once` has an incompatible type for trait
  --> $DIR/issue-20225.rs:20:3
   |
LL |   extern "rust-call" fn call_once(self, (_,): (T,)) {}
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected reference, found type parameter
   |
   = note: expected type `extern "rust-call" fn(Foo, (&'a T,))`
              found type `extern "rust-call" fn(Foo, (T,))`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0053`.
